# lendingclub-credit-scorecard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  unpack.yml
artifacts/: approval_strategy_scenarios.csv  binning_rules.json  binning_table.csv  cleaning_audit.json  coefficients.csv  feature_decisions.csv  feature_psi.csv  hyperparameter_tuning.csv  iv_summary.csv  metrics.json  oot_decile_lift.csv  sample_split.csv  score_psi_bins.csv  score_summary.csv  scorecard_points.csv  vintage_summary.csv  winsorization_rules.json
configs/: model_config.json
docs/: data_dictionary.md  resume_project_entry.md
notebooks/: README.md
reports/: model_development_report.md  郭锦航_LendingClub贷前信用评分卡项目报告.docx
scripts/: build_report_docx.py  download_data.py  train_scorecard.py
src/credit_scorecard/: __init__.py  binning.py  data.py  metrics.py  modeling.py  pipeline.py  reporting.py  scoring.py
tests/: test_scorecard.py
