[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lendingclub-credit-scorecard"
version = "1.0.0"
description = "Leakage-aware LendingClub application scorecard with WOE, logistic regression, OOT validation and PSI monitoring."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Guo Jinhang"}]
dependencies = [
  "joblib>=1.3,<2",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "python-docx>=1.1,<2",
  "scikit-learn>=1.4,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
